Adding an example of using a lucene index.
Adding an example of indexing and querying data with lucene. Only the
gradle build is updated at this point, not the maven pom. There is an
example of annotation based configuration and xml configuration.

--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -28,7 +28,9 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-data-gemfire")
+    compile("org.springframework.boot:spring-boot-starter")
     runtime("org.springframework.shell:spring-shell:1.0.0.RELEASE")
+    compile 'org.springframework.data:spring-data-geode:1.0.0.INCUBATING-RELEASE'
+    compile 'org.apache.geode:geode-lucene:1.0.0-incubating'
 }
 
